manifest/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: studentapp-db
  labels:
    app: studentapp-db
spec:
  selector:
    matchLabels:
      app: studentapp-db
  replicas: 1
  template:
    metadata:
      labels:
        app: studentapp-db
    spec:
      containers:
      - name: studentapp
        image: mariadb:latest
        ports:
        - containerPort: 3306
